mac: Send SIGTERM instead of SIGHUP to restart Dock

Dock swallows SIGHUP as of macOS 10.12. SIGTERM still works.

BUG=620385

Review-Url: https://codereview.chromium.org/2108703002
Cr-Commit-Position: refs/heads/master@{#402574}

Former-commit-id: 339ee572c21fa708c4eec78ecd2950b6263165e4